<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DonateMySchoolStuff</string>
    <string name="action_settings">Settings</string>
    <string name="HOST">http://192.168.39.174:8080</string>
    
    
    
    <string name="name">Nome:</string>
    <string name="category">Categoria:</string>
    <string name="school">Scuola:</string>
    <string name="tags">Tags:</string>
    <string name="place">Place:</string>
    <string name="search">Cerca</string>
    <string name="description">Descrizione</string>
    <string name="go">Accedi</string>
    <string name="b_edit">Modifica</string>
    <string name="b_cancel">Cancella</string>
    <string name="message">Per vedere o aggiungere le tue pubblicazioni devi inserire la tua mail. </string>
    <string name="notification">Mandami notifiche per li articoli a cui sono interessato </string>
    
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered (regId = %1$s)!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    
    
    
    <string name="msg_qrcode">Per iniziare ad utilizare questa applicazione devi scansionare il QR-code che si trova nel tuo carrello. Avrai la possibilita di vedere le nostre oferte e molti altri sconti sulla merce acquistata. Inizia subito!</string>
    <string name="b_scan">Scannerizza carrello</string>
    <string name="b_visualize_offer">Visualizza offerte</string>
    <string name="b_find_position">La mia posizione</string>
    <string name="b_search_article">Cerca un articolo</string>

</resources>
