<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<TextView 
 	    android:text="@string/name"
 	   android:layout_width="wrap_content"
 	   android:layout_height="wrap_content"/>
 	
 	<EditText android:id="@+id/name"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"/>
    
 	<TextView 
 	    android:text="@string/place"
 	   android:layout_width="wrap_content"
 	   android:layout_height="wrap_content"/>
    
    <EditText android:id="@+id/posto"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"/>
    
 	<TextView 
 	    android:text="@string/tags"
 	   android:layout_width="wrap_content"
 	   android:layout_height="wrap_content"/>
 	
 	<EditText android:id="@+id/tags"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"/>
 	
 	<LinearLayout 
 	    android:layout_height="wrap_content"
 	    android:layout_width="fill_parent"
 	    android:gravity="center">
 	    
	 	<Button android:id="@+id/b_search"
	 	    android:text="@string/search"
	 	    android:layout_width="wrap_content"
	 	    android:layout_height="wrap_content"/>
 	
 	</LinearLayout>
    
</LinearLayout>