<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    
    <EditText android:id="@id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    
    <TextView android:text="@string/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
    <EditText android:maxLines="5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:lines="5"/>
    
    
    <TextView android:text="@string/tags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    
    <EditText android:id="@id/tags"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    
    

</LinearLayout>